--- a/index.css
+++ b/index.css
@@ -827,10 +827,6 @@ footer i:hover {
     flex-direction: column;
   }
 
-  .skills {
-    padding: 2rem 2rem;
-  }
-
   .services {
     padding: 1.7rem;
   }
@@ -839,7 +835,8 @@ footer i:hover {
     flex-direction: column;
   }
 
-  .experiences {
+  .experiences,
+  .skills {
     padding: 2rem;
   }
 
@@ -856,11 +853,11 @@ footer i:hover {
   }
 
   .contact {
-    padding: 1rem 3rem;
+    padding: 1rem 2rem;
   }
 
   .about {
-    padding: 3rem 3rem;
+    padding: 3rem 2rem;
   }
 
   .about-main {
