--- a/index.css
+++ b/index.css
@@ -399,22 +399,29 @@ section {
 
 .skills-items {
   padding-top: 2rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  flex-wrap: wrap;
   height: 100%;
   justify-content: space-between;
-  padding-left: 3%;
 }
 
 .skill-item {
+  border-radius: 10px;
+  padding: 0.5rem 0;
+  width: 45%;
+  margin-bottom: auto;
+  border: 2px solid #cccccc;
   display: flex;
   flex-direction: row;
   gap: 5px;
-  align-items: start;
+  align-items: center;
+  justify-content: center;
+  & * {
+    font-weight: 500;
+  }
 }
 
 .skill-item i {
-  margin-top: 0.1rem;
   font-size: 0.9rem;
 }
 
